--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Cache::FastMmap::Tie
 
+0.01_01   Mon Dec 24 23:02:39 2007
+        - Makefile.PL file modifications
+
 0.01     Wed Dec 19 13:15:09 2007
         - Document modifications
 
