--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Cache::FastMmap::Tie
 
+0.02      Wed Jan  9 23:33:47 2008
+        - 
+
+0.01_02   Wed Jan  9 00:25:44 2008
+        - Basic global parameter can also be obtained from a YAML file.
+
 0.01_01   Mon Dec 24 23:02:39 2007
         - Makefile.PL file modifications
 
